# transbeam

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build_n_test.yml
bench/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  basic_bounded.cpp  basic_unbounded.cpp
include/transbeam/: mpmc.hpp
include/transbeam/__detail/: backoff.hpp  util.hpp
tests/: CMakeLists.txt  main.cpp
